tests/machine/x/cobol/values_builtin.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/values_builtin.cob:13: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/values_builtin.cob:14: error: 'FN_VALUES_RES' is not defined
/workspace/mochi/tests/machine/x/cobol/values_builtin.cob:13: error: 'FN_VALUES' is not defined

