tests/machine/x/cobol/values_builtin.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:19Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. VALUES-BUILTIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 M.
           05 A PIC 9 VALUE 1.
           05 B PIC 9 VALUE 2.
           05 C PIC 9 VALUE 3.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_VALUES USING M
       DISPLAY FN_VALUES_RES
       STOP RUN.
